--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html">Hell0</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="houseprice.html">Prices</a></li>
                 <li><a href="contactme.html">Contact Me</a></li>
