Changes so that the images can render

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         </header>
         <nav>
             <ul>
-                <li><a href="index.html">Hell0</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="houseprice.html">Prices</a></li>
                 <li><a href="contactme.html">Contact Me</a></li>
@@ -25,7 +25,7 @@
             <h2>Ronald Lopez</h2>
             <h3>Salt Lake City, UT Real Estate Agent</h3>
             <div>
-                <img src="Ron.jpg.JPG" alt="Ron The Realtor" style="width:40%" height="340">
+                <img src="ron.jpg.JPG" alt="Ron The Realtor" style="width:40%" height="340">
             </div>
 
             <p>
