--- a/contactme.html
+++ b/contactme.html
@@ -23,7 +23,7 @@
 
         </nav>
         <div id="Sold">
-            <img src="SoldHouse.jpg" width="500" height="400" alt="Sold House">
+            <img src="soldhouse.jpg" width="500" height="400" alt="Sold House">
         </div>
         <main>
             <h2>I would like to hear from you</h2>
