--- a/contactme.html
+++ b/contactme.html
@@ -22,7 +22,7 @@
             </ul>
 
         </nav>
-        <div id="Sold">
+        <div id="sold">
             <img src="soldhouse.jpg" width="500" height="400" alt="Sold House">
         </div>
         <main>
@@ -53,7 +53,7 @@
         </main>
         <footer>
 
-            Copyright &copy; 2020 Pacific Trails Resort<br>
+            Copyright &copy; 2020 Ron The Realtor<br>
             <a href="mailto:gustavo.lopez@davistech.edu">
                 gustavo.lopez@davistech.edu
             </a>
